[gd_scene load_steps=13 format=2]

[ext_resource path="res://Levels/Start_gate_location/LoveGate/Gates/LoveGateLeft.png" type="Texture" id=1]
[ext_resource path="res://Levels/Start_gate_location/LoveGate/Gates/LoveGateRight.png" type="Texture" id=2]
[ext_resource path="res://Levels/Start_gate_location/LoveGate/Gates/Gates.gd" type="Script" id=3]
[ext_resource path="res://Shaders/StarsShader.tres" type="Shader" id=4]
[ext_resource path="res://WorldObjects/Technical/InteractionController/InteractionController.tscn" type="PackedScene" id=5]
[ext_resource path="res://WorldObjects/Technical/InteractionPopup/InteractionPopup.tscn" type="PackedScene" id=6]
[ext_resource path="res://WorldObjects/Technical/InteractionTextBox/TextBoxPopup.tscn" type="PackedScene" id=7]

[sub_resource type="Animation" id=1]
resource_name = "Open"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -15, -80 ), Vector2( -50, -80 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 17, -80 ), Vector2( 53, -80 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Area2D/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=4]
resource_name = "Opened"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -50, -80 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 57, -80 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Area2D/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="ShaderMaterial" id=6]
shader = ExtResource( 4 )
shader_param/bg_color = null

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 32, 19.5 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 11.5, 16.5 )

[node name="Gates" type="Node2D"]
script = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
pause_mode = 2
anims/Open = SubResource( 1 )
anims/Opened = SubResource( 4 )

[node name="GatesBackground" type="ColorRect" parent="."]
material = SubResource( 6 )
margin_left = -31.0
margin_top = -160.0
margin_right = 33.0

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -15.4839, -80 )
scale = Vector2( 1.03226, 1 )
texture = ExtResource( 1 )

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( 17.5152, -80 )
scale = Vector2( 1.0303, 1 )
texture = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 1, -19.5 )
shape = SubResource( 5 )
disabled = true

[node name="InteractionController" parent="." instance=ExtResource( 5 )]

[node name="InteractionPopup" parent="." instance=ExtResource( 6 )]
position = Vector2( 0, -22 )
labelText = "войти"

[node name="GatesText" type="Node2D" parent="."]
position = Vector2( -17, -13 )

[node name="Sprite" type="Sprite" parent="GatesText"]
position = Vector2( 2, -22 )

[node name="InteractionPopup" parent="GatesText" instance=ExtResource( 6 )]
position = Vector2( 0, -19 )
z_index = 99
labelText = "inspect"

[node name="TextBoxPopup" parent="GatesText" instance=ExtResource( 7 )]
position = Vector2( 0, -32 )
z_index = 99
interaction_controller_path = NodePath("../InteractionController")
texts_array = [ "gate_location_gate_door" ]

[node name="InteractionController" parent="GatesText" instance=ExtResource( 5 )]

[node name="CollisionShape2D" parent="GatesText/InteractionController/Area2D" index="0"]
position = Vector2( 0.5, 0.5 )
shape = SubResource( 7 )

[editable path="GatesText/InteractionController"]
